change look and feel and sync inventory

--- a/qp_phonix_front/www/order/new_type.html
+++ b/qp_phonix_front/www/order/new_type.html
@@ -49,7 +49,7 @@
             margin: 20vh auto;
         }
         body {
-            background-image: url("/assets/qp_phonix_front/img/background.png");
+            background-image: url("/assets/qp_phonix_front/img/background_phonix.png");
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
@@ -73,7 +73,7 @@
             text-align: center;
             font: normal normal bold 28px/44px Montserrat;
             letter-spacing: 0px;
-            color: #4D6444;
+            color: #000;
             opacity: 1;
         }
 
@@ -86,7 +86,7 @@
             text-align: left;
             font: normal normal bold 33px/48px Montserrat;
             letter-spacing: 0px;
-            color: #4D6444;
+            color: #000;
             opacity: 1;
         }
 
