change look and feel

--- a/qp_phonix_front/www/order/new_type.html
+++ b/qp_phonix_front/www/order/new_type.html
@@ -127,8 +127,7 @@
 
     <div class="content">
         <div class="title">
-            Please select the type <br>
-            of product you want to see
+            Seleccione el tipo de producto <br> que desea ver
         </div>
     </div>
     <div class="content">
