add botton confirm to form confirm

--- a/qp_phonix_front/www/order/confirm.html
+++ b/qp_phonix_front/www/order/confirm.html
@@ -19,6 +19,9 @@
         <a id="btn_edit_order"  class="btn button-master button-default">
             {{ _("EDIT ORDER") }}
         </a>
+    {%endif%}
+    {%if has_sync %}
+    
         <a id = "btn_confirm_order"  class="btn button-master button-default">
             {{ _("CONFIRM ORDER") }}
         </a>
