--- a/qp_phonix_front/www/order/index.html
+++ b/qp_phonix_front/www/order/index.html
@@ -2,11 +2,11 @@
 
 
     {% block section_title %}                 
-        {{ _("Your Orders") }}
+        {{ _("Tus Ordenes") }}
     {% endblock %}
 
     {% block button_title %}
-        <a href="/order/new_type" class="btn button-master button-new button-default">
+        <a href="/order/item_formulary" class="btn button-master button-new button-default">
             {{ _("NEW ORDER") }}
         </a>              
     {% endblock %}
@@ -106,7 +106,7 @@
         
             <div class="col-sm-12 button-second">
                     
-                    <a href="/order/new_type" class="btn button-master button-content">
+                    <a href="/order/item_formulary" class="btn button-master button-content">
                         NEW ORDER                            
                     </a>
             </div>
