change function basic

--- a/qp_phonix_front/www/order/confirm.html
+++ b/qp_phonix_front/www/order/confirm.html
@@ -267,7 +267,7 @@
                                     Cantidad
                                 </div>
                                 <div class="col-sm-3">
-                                    Múltiplo
+                                    Pedir por paquetes de
                                 </div>
                                 <div class="col-sm-2">
                                     Precio
