--- a/qp_phonix_front/www/order/confirm.html
+++ b/qp_phonix_front/www/order/confirm.html
@@ -199,7 +199,7 @@
                     Costo Total
                 </div>
                 <div class=" col-md-12 title" style="line-height: 48px;">
-                    $ <span id="price_total">{{order.total_format}}</span>
+                    $ <span id="price_total">{{order.total_format | replace(",", ".")}}</span>
                 </div>
                 <div class=" col-md-12 subtitle">
                     COP
@@ -290,9 +290,9 @@
                                         <input type="hidden" name="" id="item_id" value="{{item.item_code}}">
 
                                         {%if order.status_code == 0%}
-                                            <input type="number"  class="form-control quantity" data-factor="{{item.inqt}}" data-value="{{item.cantidad}}" id="quantity" value="{{item.cantidad}}">
+                                            <input type="number"  class="form-control quantity" data-factor="{{item.inqt}}" data-value="{{item.cantidad | int}}" id="quantity" value="{{item.cantidad | int}}">
                                         {%else%}
-                                                {{item.cantidad}}
+                                                {{item.cantidad | int}}
                                         {%endif%}
                                     </div>
                                 </div>
@@ -303,12 +303,12 @@
                                 </div>
                                 <div class="col-sm-2">
                                     <div class="background-info information_label">
-                                        $ {{item.price_format}}
+                                        $ {{item.price_format | replace(",", ".")}}
                                     </div>
                                 </div>
                                 <div class="col-sm-2">
                                     <div class="background-info information_label">
-                                        $ {{item.total_format }}
+                                        $ {{item.total_format | replace(",", ".")}}
                                     </div>
                                 </div>
                             </div>
