translate words index and confirm template

--- a/qp_phonix_front/www/order/index.html
+++ b/qp_phonix_front/www/order/index.html
@@ -7,7 +7,7 @@
 
     {% block button_title %}
         <a href="/order/item_formulary" class="btn button-master button-new button-default">
-            {{ _("NEW ORDER") }}
+            {{ _("Nueva Orden") }}
         </a>              
     {% endblock %}
 
@@ -64,10 +64,10 @@
 
                 <div class="row text-center">
                     <div class="tab-items active margin-left" >
-                        Draft
+                        ‌Borrador
                     </div>
                     <div class="tab-items">
-                        Orders
+                        Órdenes
                     </div>
                 </div> 
                 <div class="row" >
@@ -107,7 +107,7 @@
             <div class="col-sm-12 button-second">
                     
                     <a href="/order/item_formulary" class="btn button-master button-content">
-                        NEW ORDER                            
+                        Nueva Orden                           
                     </a>
             </div>
 
