add total antes de iva to cost total

--- a/qp_phonix_front/www/order/confirm.html
+++ b/qp_phonix_front/www/order/confirm.html
@@ -196,7 +196,7 @@
             </div>
             <div class="col-sm-3 shadow p-3 mb-5 bg-white rounded">
                 <div class=" col-md-12 subtitle">
-                    Costo Total
+                    Costo Total Antes de IVA
                 </div>
                 <div class=" col-md-12 title" style="line-height: 48px;">
                     $ <span id="price_total">{{order.total_format | replace(",", ".")}}</span>
