responsive index and item_formulary v1

--- a/qp_phonix_front/www/order/confirm.html
+++ b/qp_phonix_front/www/order/confirm.html
@@ -89,6 +89,8 @@
 
     .description-label{
         display: none;
+        margin-bottom: 0.25em;
+
     }
     @media (max-width: 576px){
         .button-master{
@@ -108,7 +110,14 @@
             display: none;
 
         }
+
+        .background-info{
+            margin-top: 0.25em;
+
+        }
         .description-label{
+            margin-bottom: 0.25em;
+
             display:block;
         }
     }
