--- a/qp_phonix_front/www/order/confirm.html
+++ b/qp_phonix_front/www/order/confirm.html
@@ -430,7 +430,7 @@
                 <div class="col-sm-7">
                     <div class="row">
                         <div class="col-sm-12 modal-title">
-                            <p>Thanks for your order</p>
+                            <p>Gracias Por su orden</p>
                         </div>
                     </div>
                     <div class="row">
