--- a/qp_phonix_front/www/order/confirm.html
+++ b/qp_phonix_front/www/order/confirm.html
@@ -303,6 +303,7 @@
                         data-price = {{item.price }} 
                         data-subtotal = "{{item.price * item.cantidad}}" 
                         data-item = "row-{{item.item_code}}" 
+                        data-description = "{{item.description}}"
                         id = "row-{{item.item_code | replace(':','-')}}">
                         <input type="hidden" class="subtotal" value={{item.price * item.cantidad}}>
                         <div class="col-sm-2" >
