--- a/qp_phonix_front/www/order/confirm.html
+++ b/qp_phonix_front/www/order/confirm.html
@@ -498,8 +498,8 @@ Orden
                             <p>Gracias Por su orden</p>
                         </div>
                         <div class="col sm-12 modal-message">
-                            <p>Aqui pueses ver la confirmacion de tu pedido</p>
-                            <p>Estas fechas estan sujetas a cambios por parte de casa matriz</p>
+                            <p>Aqui puedes ver la confirmacion de tu pedido</p>
+                            <p>Estas fechas están sujetas a cambios por parte de casa matriz</p>
                         </div>
                     </div>
                     <div class="row">
