--- a/qp_phonix_front/www/order/index.html
+++ b/qp_phonix_front/www/order/index.html
@@ -6,12 +6,12 @@
     {% endblock %}
 
     {% block button_title %}
-        <a href="/api/method/qp_phonix_front.www.order.index.export" target="_blank" class="btn button-master button-new button-default tab-section tab-all" style="display:none;">
+        <span data-url="/api/method/qp_phonix_front.www.order.index.export" target="_blank" class="btn button-master button-new button-default tab-section tab-all btn-redirect" style="display:none;">
             {{ _("Exportar") }}
-        </a> 
-        <a href="/order/item_formulary" class="btn button-master button-new button-default">
+        </span> 
+        <span data-url="/order/item_formulary" class="btn button-master button-new button-default btn-redirect">
             {{ _("Nueva Orden") }}
-        </a>              
+        </span>              
     {% endblock %}
 
 
