--- a/qp_phonix_front/www/order/confirm.html
+++ b/qp_phonix_front/www/order/confirm.html
@@ -379,6 +379,11 @@ Orden
                                         <span style="color: #5aa83a; font-size: 0.8em;"
                                             id="label-{{item.item_code | replace(':','-')}}">
                                             Producto con descuento</span>
+                                        {% elif item.auto_discount %}
+
+                                        <span style="color: #ecdd09; font-size: 0.8em;text-shadow: 0.5px 0.5px #a6a6a6;"
+                                            id="label-{{item.item_code | replace(':','-')}}">
+                                            Producto con {{item.auto_discount}}% de descuento disponible</span>
                                         {% endif %}
                                     </div>
                                 </div>
