--- a/qp_phonix_front/www/order/confirm.html
+++ b/qp_phonix_front/www/order/confirm.html
@@ -384,7 +384,7 @@ Orden
 
                                         <span style="color: #ecdd09; font-size: 0.8em;text-shadow: 0.5px 0.5px #a6a6a6;"
                                             id="label-{{item.item_code | replace(':','-')}}">
-                                            Producto con {{item.auto_discount}}% de descuento disponible</span>
+                                            Producto con {{item.auto_discount}}% de descuento disponible, total puede ser de {{item.auto_discount_total}}</span>
                                         {% endif %}
                                     </div>
                                 </div>
